# software_development_abm

./: .gitignore  LICENSE  main.py  plan.md  plan_draft.md  pyproject.toml
abm/: agent.py  agile.py  ai_layer.py  config.py  hybrid.py  metrics.py  react_layer.py  scaling.py  waterfall.py
analysis/: plots.py  sensitivity_results.json  statistics.py
docs/: simulation_summary_bott_mesmer_2019.md  simulation_summary_khalil_2023.md
docs/roadmap/: README.md  phase1_foundation.md  phase2_large_scale.md  phase3_hybrid.md  phase4_ai_coding.md  phase5_full_comparison.md
simulations/: run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  run_sensitivity.py
tests/: test_agent.py  test_agile.py  test_ai_layer.py  test_hybrid.py  test_metrics.py  test_phase5.py  test_plots.py  test_react_layer.py  test_run_phase2.py  test_run_phase2_extra.py  test_scaling.py  test_waterfall.py
