[project]
name = "software-development-abm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "numpy>=2.5.0",
    "matplotlib>=3.11.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "scipy>=1.18.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed (ignore as we will document them)
    "CPY001",  # Missing copyright notice
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # 1 blank line required before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "FA102",   # Missing `from __future__ import annotations`
    "T201",    # print found
    "S311",    # Suspicious non-cryptographic random usage
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean default positional argument in function definition
    "PLR0913", # Too many arguments to function call
    "D107",    # Missing docstring in __init__
    "S101",    # Use of assert detected (we use it for tests)
    "PLR2004", # Magic value used in comparison
    "D103",    # Missing docstring in public function
    "ANN201",  # Missing return type annotation for public function
    "SLF001",  # Private member accessed (we use it for unit tests)
]

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
